MPfm 0.6.0.0 - Playlist window: Added tooltips. Removed the Close button.
Related to issue #314.


git-svn-id: http://hamster-svn/svn/repos/base@358 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm/Other Screens/frmPlaylist.resx
+++ b/MPfm/branches/current/MPfm/Other Screens/frmPlaylist.resx
@@ -125,22 +125,25 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACu
-        AgAAAk1TRnQBSQFMAwEBAAHkAQAB5AEAARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
-        ARADAAEBAQABIAYAARD/AP8ANAADBwEJ+AABQgFZAUcB9QEAAYEBDAH/AxgBIfQAAUIBWQFLAfUBMQGh
-        AU0B/wFaAWEBWgHkAxwBJ+AAATUBfwFbAf4BLwF/AVMB/gEpAX8BTQH+ASMBfwFIAf4BKAGfAUwB/wGB
-        AcEBlgH/ATQBowFQAf8BXAFkAVwB5wMdASrcAAEXAZsBSQH/AZABygGpAf8BjQHIAaUB/wGKAcYBoQH/
-        AYgBxQGeAf8BWAG2AYUB/wGCAcIBlwH/ATYBpQFUAf8BVQJcAeoDIQEw2AABHwGfAVEB/wGUAc0BrQH/
-        AV0BugGOAf8BWQG4AYkB/wFUAbYBhQH/AU8BswGBAf8BVQG1AYIB/wGDAcIBmAH/ASoBoAFKAf8BKwFj
-        ASsB/NgAASUBowFZAf8BlgHOAbAB/wGUAc0BrQH/AZEBywGqAf8BkAHLAagB/wFiAbwBkAH/AYoBxwGh
-        Af8BNAGlAVYB/wFAAYcBQAH9AwsBD9gAASsBpQFdAf8BQAGjAUUB/QFAAaEBQgH9AUABnQFAAf0BQwGv
-        AYEB/wGRAcsBqgH/AT0BqwFiAf8BQAGPAUAB/QMJAQzsAANZAfUBSAGzAYEB/wEWAZgBRQH/AwcBCfAA
-        A1kB9QEfAZ8BUwH/AwcBCf8A/wD/AP8A3AABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGA
+        AgAAAk1TRnQBSQFMAwEBAAH0AQAB9AEAARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
+        ARADAAEBAQABIAYAARD/AP8ANAADBwEJ+AABQgFZAUcB9QEAAYEBCgH/AxgBIfQAAUIBWQFLAfUBLwGh
+        AUsB/wFaAWEBWgHkAxwBJ+AAATUBfwFbAf4BLwF/AVMB/gEpAX8BTQH+ASMBfwFIAf4BJgGfAUoB/wGB
+        AcEBlgH/ATIBowFOAf8BXAFkAVwB5wMdASrcAAEVAZsBRwH/AZABygGpAf8BjQHIAaUB/wGKAcYBoQH/
+        AYgBxQGeAf8BVgG2AYUB/wGCAcIBlwH/ATQBpQFSAf8BVQJcAeoDIQEw2AABHQGfAU8B/wGUAc0BrQH/
+        AVsBugGOAf8BVwG4AYkB/wFSAbYBhQH/AU0BswGBAf8BUwG1AYIB/wGDAcIBmAH/ASgBoAFIAf8BKwFh
+        ASsB/NgAASMBowFXAf8BlgHOAbAB/wGUAc0BrQH/AZEBywGqAf8BkAHLAagB/wFgAbwBkAH/AYoBxwGh
+        Af8BMgGlAVQB/wFAAYcBQAH9AwsBD9gAASkBpQFbAf8BQAGjAUMB/QFAAaEBQAH9AUABnQFAAf0BQQGv
+        AYEB/wGRAcsBqgH/ATsBqwFgAf8BQAGPAUAB/QMJAQzsAANZAfUBRgGzAYEB/wEUAZgBQwH/AwcBCfAA
+        A1kB9QEdAZ8BUQH/AwcBCf8A/wD/AP8A3AABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGA
         FwAD/wEAAv8GAAL/BgAB/wF/BgAB/gE/BgAB/gEfBgAB4AEPBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEP
         BgAB/gEfBgAB/gE/BgAC/wYAAv8GAAL/BgAC/wYACw==
 </value>
   </data>
   <metadata name="menuPlaylist.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>136, 20</value>
+  </metadata>
+  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>815, 13</value>
   </metadata>
   <metadata name="dialogLoadPlaylist.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>267, 13</value>
