MPfm 0.6.0.0 * Main Window (WinForms)   - Added a different timer for updating the Song Position panel controls.     Not sure it really helps CPU usage so far, more testing needed.
Related to issue #343.


git-svn-id: http://hamster-svn/svn/repos/base@443 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm/frmMain.resx
+++ b/MPfm/branches/current/MPfm/frmMain.resx
@@ -195,32 +195,32 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB0
-        YwAAAk1TRnQBSQFMAgEBGAEAAUwBCAFMAQgBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        YwAAAk1TRnQBSQFMAgEBGAEAAVQBCAFUAQgBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
         AwABcAMAAQEBAAEgBgABcP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AogBA/8AABP8DgQH/
         A/EB/wOBAf8DgQH/A4EB/wOpAf8DpAH/A6AB/wOkAf8DgQH/A4EB/wOBAf8DuAH/A4YB/wOBAf8MAAMV
-        AR0DQAFwAVUBVwFVAbcBVQFcAVUB6gNAAf0BAAEsAQAB/wEAASgBAAH/AQABJQEAAf8BAAEhAQAB/wEA
-        AR4BAAH/AQABGwEAAf8oAAMHAQlcAAT/A4EB/wPuAf8DgQH/A4EB/wOJAf8DmAH/A4EB/wOBAf8DgQH/
-        A6QB/wOBAf8DgQH/A4EB/wPCAf8DgQH/CAADJgE5AVMBVQFTAbABFgGjARwB/wEmAbEBLAH/ATEBvAE4
-        Af8BNAG/ATkB/wEyAb4BOAH/ATABvQE1Af8BLQG8ATMB/wEsAbsBMAH/ASkBuQEvAf8BAAEeAQAB/yQA
+        AR0DQAFwAVUBVwFVAbcBVQFcAVUB6gNAAf0BAAErAQAB/wEAAScBAAH/AQABJAEAAf8BAAEgAQAB/wEA
+        AR0BAAH/AQABGgEAAf8oAAMHAQlcAAT/A4EB/wPuAf8DgQH/A4EB/wOJAf8DmAH/A4EB/wOBAf8DgQH/
+        A6QB/wOBAf8DgQH/A4EB/wPCAf8DgQH/CAADJgE5AVMBVQFTAbABFQGjARsB/wElAbEBKwH/ATABvAE3
+        Af8BMwG/ATgB/wExAb4BNwH/AS8BvQE0Af8BLAG8ATIB/wErAbsBLwH/ASgBuQEuAf8BAAEdAQAB/yQA
         A1kB9QOBAf8DGAEhWAAE/wOBAf8DxQH/A4EB/wOBAf8DrwH/A4EB/wOBAf8DgQH/A4EB/wOGAf8DgQH/
-        A4EB/wOBAf8D6wH/A4EB/wQAAxUBHQFTAVUBUwGwASoBtQEyAf8BhQHHAYsB/wE0AcEBOwH/ATsBxAGG
-        Af8BOAHCAYIB/wE1AcEBgAH/ATMBvwE6Af8BMAG9ATYB/wEuAb0BNAH/ASwBuwExAf8BAAEiAQAB/yQA
+        A4EB/wOBAf8D6wH/A4EB/wQAAxUBHQFTAVUBUwGwASkBtQExAf8BhQHHAYsB/wEzAcEBOgH/AToBxAGG
+        Af8BNwHCAYIB/wE0AcEBgAH/ATIBvwE5Af8BLwG9ATUB/wEtAb0BMwH/ASsBuwEwAf8BAAEhAQAB/yQA
         A1kB9QGBAaEBgQH/A2EB5AMcASdAAANXAbgDBAEGDAAE/wOeAf8DlQH/A4EB/wOBAf8DmwH/A4EB/wOB
-        Af8DgQH/A4EB/wOBAf8DowH/A4EB/wOBAf8D6AH/A4EB/wQAA0ABcAEkAbIBLAH/AYsBywGTAf8BiQHK
-        AZAB/wE6AcEBhQH/ARUBogEcAf8BAAGFAQAB/wEAAYABAAH/AQABNwEAAf8BAAEzAQAB/wEAAS8BAAH/
-        AQABKgEAAf8BAAEnAQAB/xQAA38B/gN/Af4DfwH+A38B/gGBAZ8BgQH/AYEBwQGWAf8BgQGjAYEB/wNk
+        Af8DgQH/A4EB/wOBAf8DowH/A4EB/wOBAf8D6AH/A4EB/wQAA0ABcAEjAbIBKwH/AYsBywGTAf8BiQHK
+        AZAB/wE5AcEBhQH/ARQBogEbAf8BAAGFAQAB/wEAAYABAAH/AQABNgEAAf8BAAEyAQAB/wEAAS4BAAH/
+        AQABKQEAAf8BAAEmAQAB/xQAA38B/gN/Af4DfwH+A38B/gGBAZ8BgQH/AYEBwQGWAf8BgQGjAYEB/wNk
         AecDHQEqOAADJgE4A20B9wFbAV4BWwHZDAAE/wPCAf8DgQH/A4EB/wOBAf8DgQH/A4EB/wOBAf8DgQH/
-        A4EB/wOBAf8DpAH/A4EB/wOBAf8D5gH/A4EB/wQAAVUCVwG3ATsBwgGHAf8BhwHKAZAB/wGFAcYBjAH/
+        A4EB/wOBAf8DpAH/A4EB/wOBAf8D5gH/A4EB/wQAAVUCVwG3AToBwgGHAf8BhwHKAZAB/wGFAcYBjAH/
         AV0BYQFdAeIBSwFMAUsBjzAAAYEBmwGBAf8BkAHKAakB/wGNAcgBpQH/AYoBxgGhAf8BiAHFAZ4B/wGB
         AbYBhQH/AYIBwgGXAf8BgQGlAYEB/wNcAeoDIQEwEAABgQG+AYEB/wGBAbgBgQH/AYEBsQGBAf8BgQGp
         AYEB/wGBAaEBgQH/AYEBmQGBAf8BgQGRAYEB/wGBAYgBgQH/A4EB/wGBAYgBgQH/AYEBoQGBAf8BgQGL
         AYEB/wNcAc8IAAT/A90B/wOBAf8DgQH/A50B/wOBAf8DgQH/A4EB/wOBAf8DgQH/A4EB/wOhAf8DgQH/
-        A4EB/wPmAf8DgQH/BAABVQJcAeoBkAHOAZgB/wGRAc8BmQH/AS4BuQE2Af8BSwJMAY80AAGBAZ8BgQH/
+        A4EB/wPmAf8DgQH/BAABVQJcAeoBkAHOAZgB/wGRAc8BmQH/AS0BuQE1Af8BSwJMAY80AAGBAZ8BgQH/
         AZQBzQGtAf8BgQG6AY4B/wGBAbgBiQH/AYEBtgGFAf8BgQGzAYEB/wGBAbUBggH/AYMBwgGYAf8BgQGg
         AYEB/wMrAfwQAAGBAcMBgQH/AaAB1wGpAf8BnAHVAaUB/wGYAdMBoQH/AZQB0AGdAf8BkAHOAZgB/wGL
         AcsBkwH/AYcByQGOAf8BggHGAYkB/wGBAcMBhAH/AYEBwQGBAf8BgQG+AYEB/wGBAYwBgQH/A1sBxAQA
         BP8D8AH/A4EB/wOBAf8DsQH/A4EB/wOBAf8DgQH/A4EB/wOBAf8DgQH/A6AB/wOBAf8DgQH/A+UB/wOB
-        Af8EAANcAeoBlAHRAZwB/wGVAdEBngH/ATIBvAE7Af8BSwJMAY8UAANEAXsDAgEDGAABgQGjAYEB/wGW
+        Af8EAANcAeoBlAHRAZwB/wGVAdEBngH/ATEBvAE6Af8BSwJMAY8UAANEAXsDAgEDGAABgQGjAYEB/wGW
         Ac4BsAH/AZQBzQGtAf8BkQHLAaoB/wGQAcsBqAH/AYEBvAGQAf8BigHHAaEB/wGBAaUBgQH/AUABhwFA
         Af0DCwEPEAABgQHHAYEB/wGlAdoBrgH/AaIB2AGrAf8BngHWAacB/wGaAdQBowH/AZYB0gGfAf8BkwHP
         AZoB/wGOAcwBlQH/AYkBygGQAf8BhQHHAYsB/wGBAcUBhwH/AYEBwgGCAf8BgQGRAYEB/wNcAckEAAT/
@@ -230,17 +230,17 @@
         AY8BQAH9AwkBDBQAAYEBxwGBAf8BgQHHAYEB/wGBAcMBgQH/AYEBvgGBAf8BgQG4AYEB/wGBAbEBgQH/
         AYEBqQGBAf8BgQGhAYEB/wGBAZkBgQH/AYEBkQGBAf8BgQGjAYEB/wGBAZ0BgQH/A1wB0QgABP8D3QH/
         A4EB/wOBAf8DngH/A4EB/wOBAf8DgQH/A4EB/wOBAf8DgQH/A6QB/wOBAf8DgQH/A+YB/wOBAf8EAANA
-        AXABNgHFAYQB/wGeAdYBpwH/AZwB1QGlAf8BkgHPAZoB/wEpAbgBMgH/AQgBoAERAf8BBQGcAQ0B/wEC
-        AZcBCgH/AQABkgEGAf8BGQGmASAB/wEWAaMBHQH/A0wBkyQAA1kB9QGBAbMBgQH/AYEBmAGBAf8DBwEJ
+        AXABNQHFAYQB/wGeAdYBpwH/AZwB1QGlAf8BkgHPAZoB/wEoAbgBMQH/AQcBoAEQAf8BBAGcAQwB/wEB
+        AZcBCQH/AQABkgEFAf8BGAGmAR8B/wEVAaMBHAH/A0wBkyQAA1kB9QGBAbMBgQH/AYEBmAGBAf8DBwEJ
         QAADbQH3A18B2wwABP8DwgH/A4EB/wOBAf8DgwH/A4EB/wOBAf8DgQH/A4EB/wOBAf8DgQH/A6kB/wOB
         Af8DgQH/A+gB/wOBAf8EAAMVAR0DVQGwAYgBzAGSAf8BoAHXAakB/wGWAdMBoAH/AZsB1AGjAf8BmQHT
-        AaEB/wGWAdEBngH/AZMBzwGbAf8BkAHOAZkB/wGNAcwBlQH/AYoBygGRAf8BFwGjAR4B/wNKAYogAANZ
+        AaEB/wGWAdEBngH/AZMBzwGbAf8BkAHOAZkB/wGNAcwBlQH/AYoBygGRAf8BFgGjAR0B/wNKAYogAANZ
         AfUBgQGfAYEB/wMHAQlEAANYAbsDBAEGDAAE/wOeAf8DlwH/A4EB/wOBAf8DoQH/A4EB/wOBAf8DgQH/
-        A4EB/wOBAf8DqQH/A4EB/wOBAf8D6wH/A4EB/wgAAyYBOQNVAbABNwHFAYUB/wGNAc4BlgH/AZgB0wGh
-        Af8BnAHVAaUB/wGZAdQBogH/AZcB0gGfAf8BlAHQAZ0B/wGRAc8BmQH/AY0BzAGUAf8BGwGoASMB/wNI
+        A4EB/wOBAf8DqQH/A4EB/wOBAf8D6wH/A4EB/wgAAyYBOQNVAbABNgHFAYUB/wGNAc4BlgH/AZgB0wGh
+        Af8BnAHVAaUB/wGZAdQBogH/AZcB0gGfAf8BlAHQAZ0B/wGRAc8BmQH/AY0BzAGUAf8BGgGoASIB/wNI
         AYSEAAT/A4EB/wPGAf8DgQH/A4EB/wO1Af8DgQH/A4EB/wOBAf8DgQH/A4wB/wOBAf8DgQH/A4EB/wPu
-        Af8DgQH/DAADFQEdA0ABcANXAbcDXAHqARMBsAEeAf8BEAGsARoB/wENAacBFwH/AQoBowETAf8BJQGz
-        AS0B/wEiAa8BKwH/AUsCTAGQiAAE/wOBAf8D8QH/A4EB/wOBAf8DjQH/A6EB/wOBAf8DgQH/A4EB/wOv
+        Af8DgQH/DAADFQEdA0ABcANXAbcDXAHqARIBsAEdAf8BDwGsARkB/wEMAacBFgH/AQkBowESAf8BJAGz
+        ASwB/wEhAa8BKgH/AUsCTAGQiAAE/wOBAf8D8QH/A4EB/wOBAf8DjQH/A6EB/wOBAf8DgQH/A4EB/wOv
         Af8DgQH/A4EB/wOBAf8DwwH/A4EB/ywAAVkBXQFZAdIBTwJRAZyMAAT/A4EB/wP2Af8DgQH/A4EB/wOB
         Af8DsgH/A68B/wOsAf8DrwH/A4EB/wOBAf8DgQH/A70B/wOJAf8DgQH/LAADQwF4AwIBA4wAQP9AAAMm
         ATkDRAF6A1UBsAHLAoEB/wHSAoEB/wHTAoEB/wHRAoEB/wHNAoEB/wNcAd8DRwGAAzcBWyQAAycBOwNO
@@ -973,19 +973,19 @@
   <data name="btnOpenAudioFiles.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKjSURBVDhPhZLdS1NhHMd3G/RPdNlFRITWXSFddJFFhRZE
-        3RQE4YWCFBk0CzOlUOeWhGIGUZAFgnlRKolr1Zwvc77NzTnn3jeruXN2XnZenm+/c2aRF7MDH57Dc57f
-        5/fyHIulzNP/JYueiSS6x+ImdS99wvW+efGqYzpYddd1/3jD233lYs39ns8JMAAZXkeWSHMaYjkFKU5B
-        21gWNS1zH07cGtxfVmKnrD8Fhq9hDd8jKpyhIkYWBfBFBldUgX3yB07fc9rLCoyyt0WG2aiG2ZgG94aC
-        8YCE9YyALV4BL6u4aP3I9hTkJYaFhAZfXMNMVIVrvYgxv4ghH484tXPZOsosKyNH5zeHzyjR4bP/UK3Y
-        qAJOApZTzMSX0OGJKHCFi2YlKU7HJUPgflUpM6bTuGhkzKD0bhulFkwBsJLSsZTUMU+VTMeMeShI8wy1
-        hmBpqGKbaRLkeAeEsA1CZADi5ntcaPEgT4JABljLllY/yRYSwHQU5rca6ydmCb45wulKnoIdKITsyIzf
-        QNBR8V9yokoCqiD4rkJRxTRS4/WIDtYg8roaW1M25GjSOrWjUUclGFSN0R4z5Wkuh9oHc6AKjilm/7pM
-        iHRSANN4FOK9kJK9EJN9EBL9xAsUEgOQ+aAp+FXQUdU8UbQEHZVFpomQEw7CvoMNmTU7Yn47Qgt2+Oe6
-        4HU/xbfJVqysTpmCU43O9PnbnrzF3Vsp6woHOWkIuokuyLEnkKKtkDatEMN3IIbqUAhcA798Dio3Ywr+
-        /kDezsMSU3KlzPFOCm6nwIeQNpoouAHC2k0UVq+AX6oG5ztJAs9uQaDjgKpsh+jqnkOMPIO40U03Qlca
-        akch+IgyN4P3N1H2RnCL9ZCzzt2C5daDPm/bIcn7mDDWvdg5Y8T8aeE3177EUYKEL9wAAAAASUVORK5C
-        YII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKkSURBVDhPhZLdS1NhHMd3G/RHdNtFRITWXS900YUSFVoQ
+        dVMQhBcKUmTQLMyUQp1bEooZREEWCCb0oiSuVXO+zPk2N+ece9+s5s7Zedl5eb79zplFXswOfHgOz3l+
+        n9/LcyyWMk//lyx6xpPoHo2b1D33CVf75sTLjqngyduuu0cbXu8pF2vu93xOgAHI8DqyRJrTEMspSHEK
+        2kazqGmZfXfsxuDeshI7Zf0pMHwNa/geUeEMFTGyIIAvMriiCuwTP3D6jtNeVmCUvSUyzEQ1zMQ0uNcV
+        jAUkrGUEbPIKeFnFeet7tqsgLzHMJzT44hqmoypca0WM+kUM+XjEqZ2L1o/MsjxyeG5juEqJDlf/Q5Vi
+        owo4CVhKMRNfQocnosAVLpqVpDgdFwyB+0WlzJhO46KRMYPSu+0TtWAKgOWUjsWkjjmqZCpmzENBmmeo
+        NQSLQxVbTJMgxzsghG0QIgMQN97iXIsHeRIEMsBqtrT6STafAKaiML/VWD8wS/DVIU5X8hTsQCFkR2bs
+        GoKOiv+SE1USUAXBNxWKKqaRGqtHdLAGkZfV2Jy0IUeT1qkdjToqwaBqjPaYKU9zOdTemwVVcEQx+9dl
+        QqSTApjGoxDvhZTshZjsg5DoJ56hkBiAzAdNwa+CjhPN40VL0FFZZJoIOeEg7NvYkFm1I+a3IzRvh3+2
+        C173Y3ybaMXyyqQpONXoTJ+96clb3L2Vsq5wkJOGoJvoghx7BCnaCmnDCjF8C2KoDoXAFfBLZ6By06bg
+        7w/k7TwoMSVXyhzvpOB2CrwPab2JghsgrF5HYeUS+MVqcL7jJPDsFAQ69qnKVoiu7inEyBOI6910I3Sl
+        oXYUgg8oczN4fxNlbwS3UA8569wpWGrd7/O2HZC8Dwlj3Y3tM0bMnxZ+A7yJxEVMtDdLAAAAAElFTkSu
+        QmCC
 </value>
   </data>
   <data name="btnPlay.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -1061,17 +1061,17 @@
   <data name="btnShuffle.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJYSURBVDhPvZPfT5JRHMa56srNrVbMubU11ypiaKUmZBtS
-        loio8fLyQ0IJMtfPrbFlRpolyJRCMCNQUYYmaGNkEpBzZs1RKMkqt6y5VfpHeKN7esGVY8vNedHZvnfn
-        +Zxznuc5NNr/XFK3MEyOkDu2daakX1hQ0cFfEdqKv6UALr2qwp+5+FIGtV+CmueiiMJDcJVewiJ7VrlA
-        usqgGpJBF9aizlsDnrEw/heSEL9bHsfb5deYWgpj8lcIjlkrbvhrccV3AdZoGxxxC57EzOicNaEjakR1
-        vxScptzpJKQ2IMcUJX6zFKLEQUz8DGD8xxgG4t2QOyth+2hG1+xDWGba8OhDK9ojLZB3E8i7zYwmAZoX
-        Uqh8JJTDItR4SOgndPB/9SCw6IOyl4R29BoUfQSKWjlQOEnIHOeQW8/69E8jyS4yTeQoMejGtBj9PoL7
-        wQYcucdY5erZgoQgX5Wzln2LtbhpClREaZUUoMx8Cp4vLnjn3Th8h7HK1h5NAnIkjDWm+kAq4PwwAdlg
-        BcT9AhA9pbjq0ySv3hK8i6F5F/ShRhCmcmTXMVBlFkPSLkIWuXfjCdKB8hSHTe/1qA/chNgshPtzL/ri
-        djip6ZmzwR57DFvMiooHAmTwM9ZNFDlLUxw2Tjfj8ogGhQ35UNuVME0a4JjrwtNYJ5WGBZ0zZgiaSkA/
-        s2c9RqpZ4FuLcNp0ElwDGyea83Bcx4oc02ZzmZqDlkPVWQv7ZfvAuZ6Pul4NBI1nQeft3CjSVnudKcws
-        SOenr9CLd6dWeauAxD46b1eYRtK295k2O+g3M8xPGiUicooAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJXSURBVDhPvZPfT5JRHMa56srNrVbMubU11yrG1JWamm1I
+        WSKixMsRkBCTzPVza2yZkWaJOqUQiAgU1KEJ0hiZBOScWXOUQrLKLWtulf4R3uieXnDl2HJzXnS27915
+        Puec53kOg/E/l8QpCBEP2bWjM6sGBPmVPbxVgaXkWxLg0qtq/JmLL6Wo81VB+VwUlrsojsJNGaTPhItk
+        sBy1I1JoQmo0uJXgdhbF/kLi4ncrE3i78hrTyyFM/QrCFjHihq8eV7wXYJztgi1mwJOoHqaIDj2znagZ
+        kKCwJWcmAan3yzBNi98sB2lxAJM//Zj4MY6hWC9kDiEsH/UwRx7CMNeFRx860B1ug6yXQu5t9mwCoHoh
+        Qa2XQDEqgtJFoJ3UwPfVBf+SFwo7gXrsGuT9FIo7CiF3EEht55DTmPnpn0YSM0kR2UrbNeNqjH334H6g
+        Cdn3WGscbQE/LshTZq9n3cpc2jIFOqIUIQ0o15+C68sg3AtOsO6w1grURxOAbMJaZ9cdSgacH6UgHa6E
+        eIAPqq8MV72qxNXbAncxsjAIbbAZlK4CWQ0sVOvFqOoWIYPs33yCZKgiyWHdey0a/Tch1gvg/GxHf8wK
+        Bz198xZYo49hiRpR+YCPNF7ahokiR1mSw50zrbjsUaGoKQ91VgV0U+2wzZvxNGqi0zDANKcHv6UUzDP7
+        NmKkmwWesRindSfBaS/AidZcHNdkho+pszhs1WHDkZqMxYPSAyi8nocGuwr85rNgcndvFmm7vU4XpOen
+        8lJXmSV7k6u8XUB8H5O7J8QgjJ19pq0O+g0ryE8WrUs90QAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnEffects.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -1092,15 +1092,15 @@
   <data name="btnPlaylist.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHOSURBVDhPxZJbSxthEIb9i0GpItazIjR4CgqJIogEBakY
-        MTYaDRJNN9u4yeZkTqQKetGqVBQLrfoDxLNmjZps8vrNrEJvtRcOvAw7zPfMO5NUVPxvmLrlT5+VY21A
-        Oobtq9DyIazeP+hf/I0+zwEsC/vondtF9+wvdM1swzz9E7aZTY3e8Wz7ynZpKnWC1+rj5FqJATT5LWof
-        XwcDbMtHeEu0jGYNgHXpL79vS+U5Z7NZZDIZJBIJ3BfKiMfjuMjpCIfDUFUViqJwX6M9/QwQB6N4EM30
-        IE96KOH2Xufv67yOqzsd57kiTm8KOLkucH/9cMIA0LUpWlZznNPpNJLJJCKRCANCoRBDZFmGJEnw+Xzc
-        VzcUNwD0U1EU9DIei2V2QiInBNCEE3Lz4uRS07m/djBiACzze1xojl1xpp2j0SgCgQAD/H4/7sRKXq8X
-        Ho8Hbreb+2psqgHo+rLDhWKpjOKzC3JCj/+VJiA5sQqJoqpvxQB0Tm9xoVE940y7B4NB3pUANJmyy+WC
-        0+mEw+HgvkrLNwNgnvrBhdeGqVc2AKYeSe6Y2AD9s1rHvqPJnkHDSEpcOcaHqhkIo9oaxId+RdgOiMky
-        TD0kSWbAu8cTmLuKzB8d3k0AAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHRSURBVDhPxZLpSxthEMb9F4NiRURtPRAUr2AgiRREgoVS
+        acTYtKlBonGzrptsNqa5iBb0gxeK0kIP/wDp4ZVNtMluHt+ZVehX7YcOPAw7zPubZyZpaPjXcAzL/a/U
+        E8MrncCzLLT0De7IF7gWPmMs/AnO+WOMvjvE8NsDDM3tYWB2B565LYPe8Wzf6q41kzvFQ9X2esNiAE1+
+        jHpffgQDPEvf8ZjomiraAPfiV37fk6twLhaLKBQKyGQyuK7WkU6n8btkIplMQtM0qKrKfZ2+/B1AHIzi
+        RjTTgwrpxsLVtcnfFxUT52UTv0o1/Lis4vSiyv3tExkbQNem6PpQ4pzP55HNZqHrOgMSiQRDZFmGJEmI
+        RqPc1/Y8bQPop6KomnX8qdXZCYmcEMAQTsjNvZMzw+T+1nHdBjjfH3Hh2do5Z9o5lUpBURQGxGIxlMVK
+        kUgE4XAYoVCI+1o8mg0YerPPhZpVR+3OBTmhx3/LEJCSWIVE0TS2agMGZ3e50Kn95Ey7x+Nx3pUANJly
+        MBhEIBCA3+/nvkbnig0YmNnmwkPDMSrbAMeIJPdNb4L+Wd0v1vHUV0DHZE5ceY0P1eJN4ok7jmaXKmwr
+        YrIMxwhJkhnw3+MWkduKyi+zGXsAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnVisualizer.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -1108,39 +1108,39 @@
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGlSURBVDhPY2AYCPDV27fgk6vrg8/2TgVk2f/R2eXxn5nT
         /38yt3tIsgH/Q0PZPtva3/1kbv7+o5EF6S74ZO3Y+9HUZhfQIGaCtrvUXyywrz730KnqFNimT9Z2gR+M
-        bZ58MrARhWv+lZW+/mV8/O9fyYnr0U10rjn9ZM7GC/8L5u/9H5mx6uwLLcdvPYE1zeZZ29pM0zY8MEpb
-        W8AA0vxv66b/z729//6KjDSDGeJSe8reuvLwB5uiQ2/c8ndVPzN1vL3GJXmbafaW1Urx83/3LDzwXzdu
-        xQOGn4kJ65/HxPz+Fh5+6XNg4L1vvr4nV8Q1LbIvOvbQpvSQPcjAj8YWMz/omW6EGW6UsrbAIGnlI934
-        xaiBGFp/ha0/efLuMy4Rn97YOr16b2J97Z6W1p/3aiZf3ykZ8+MNNPv6kxIOVaeO2ZceWWpReIzzvamV
-        wT1D87//pk35f0dd6w9OzS615wucq848t6k89AaouRRZ4Vttw/X35eV/v1XUxghguDqn8pMPJq+5+N+u
-        bP9LgvGKTYF9xbEC29KDD6wL95OeqsiykdqaAA/qvZKT3nN0AAAAAElFTkSuQmCC
+        bZ58MrARhWv+lZW+/kV8/O9fyYnr0U10rjn9ZM7GC/8L5u/9H5mx6uwLLcdvPYE1zeZZ29pM0zY8MEpb
+        W8AA0vxv66b/z7y8/v6KjDSDGeJSe8reuvLwB5uiQ2/c8ndVPzN1vL3GJXmbafaW1Yrx83/3LDzwXzdu
+        xQOGn4kJ65/FxPz+Fh5+6XNg4L1vvr4nV8Q1LbIvOvbQpvSQPcjAj8YWMz/omW6EGW6UsrbAIGnlI934
+        xaiBGFp/ha0/efLuMy4Rn97YOr16b2J97a6W1p/3aiZf3ykZ8+MNNPv6kxIOVaeO2ZceWWpReIzzvamV
+        wV1D87//pk35f1td6w9OzS615wucq848t6k89AaouRRZ4Vttw/X35eV/v1XUxghguDqn8pMPJq+5+N+u
+        bP9LgvGKTYF9xbEC29KDD6wL95OeqsiykdqaAPvKvYjioj3WAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnThemes.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGRSURBVDhPY2CgBoibdLYwfuLZCfGTz50B4v/xjbv/xU86
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGRSURBVDhPY2CgBoibdLYwfuLZCfGTz50B4v/xDbv+xU86
         +z9+wpn/iUA6efLZ/4kTT/8Pbz/+PmXCqdPd6278715z/T/cbqDi2f9JBJ2rriEMiJt89gZI/5wjb+F4
-        NpCNC4PURtcf+wF3QeyEsx9gBhy89eU/CB+6jR2DDAWBiPr1/+AG+NTv+gUSxGcrshxIbXjjPoQXYut3
-        /iMxCP6H1u1BGBDTcwqsP6R+z3+f2l3/vWp2gfn3nn7AisFqa3YiDIjuOgHW4FC2/X/zsov/LYq3wQ14
+        NpCNC4PURtcf+wF3QeyEsx9gBhy89eU/CB+6jR2DDAWBiPp1/+AG+NTv/AUSxGcrshxIbXjjPoQXYut3
+        /CMxCP6H1u1BGBDTcwqsP6R+z3+f2l3/vWp2gfn3nn7AisFqa3YiDIjuOgHW4FC2/X/zsov/LYq3wQ14
         /f7bf2QMMhQEgiu2IQyI6jgOFjTO2/K/bumF/3o5m1AMePbm638QBhkEMyCwbBOSC9qOgjXopK//X7rg
-        7H/tlLUEDQgoWoPkgrYjcANK5mMagM0L/oUrEAZE1G8AxwLIBSDbkV2ALSBBav3ypyLSQWD93nukRqNv
-        1qK38IQUWrOvP6Rq99ag6t3vgit3/Q8s3/Y/sGzL/4CSjf/9i9b+9y9cBbRxxX/fvOVAPOWfb96Sj955
-        y45QIyMzAAALlIqslaufPwAAAABJRU5ErkJggg==
+        7H/tlLUEDQgoWoPkgrYjcANK5mMagM0L/oUrEAZE1K8HxwLIBSDbkV2ALSBBav3ypyDSQWD93nukRqNv
+        1qK38IQUWrOvP6Rq99ag6t3vgit3/Q8s3/Y/sGzL/4CSjf/9i9b+9y9cBbRxxX/fvOVAPPmfb96Sj955
+        y45QIyMzAAD554qkU5bYdgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnSettings.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHgSURBVDhPlZLdb9JQGMb3v/ivmMzEaLIrb7z12pmZ6DRL
-        g4BFLARLg60t7kINTuqMYbhRUWvLl0m12vDhF5ghA0FXrxYvavbsrYnxYpPBSU7Ozfk9z/s858zMTLDS
-        6fS8oihNWZY9SZK8CZB/V3yYwJ1erwfXdZFKpTCVgCiKzW63i8FggEKhgGQyObWA57vbto1EImH47vF4
-        HBzHIRqNHh4nFAr9brfbKJfLiMViL2mbqqqi1WqBZdnxAoIgHAsEArv1eh21Wg3FYhGapsEwDJRKJYTD
-        4eaBfVzPfuXZzEeb53mvWq3Csiz4Z6VSgWma0HUdNNkOic/vE4isbPJKYQDxSR/cyns4joN8Pg+GYXb9
-        kcnVCwaDzQPhqz683kfR/gntjQtutYvLsoNIJPKLoCNjny+U2eQlgp8SmNGHuPPsG3K1Hwjc/YLT15xX
-        Y2G6xItrfWivXdx7MURqbQtpirFa+Y7F5Q7mrjQe/FeAIVjI9bFhEfx8CCG3BZkmeVga4eLtDk4yjjrW
-        fXG5jXVr+8/I/OMeblF5qjnCeaWDE4fBvvLZm58o6zbkDWqeYmQJXiB4dunto4n+/JkbHyy/qKwxwn19
-        hHPSZ8xemhD+63CKbTTmgg0cX3qHoxemg/cAAmpfEjpsMeEAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHhSURBVDhPlZLdb9JQGMb3v/ivmMzEaLIrb7z12pmZ6DRL
+        QcAiFoKlwdYWd6EGJ2zGMNyoqLXly6RabfjwC8yQgaCrV4sXNXt8a2K82GRwkpNzc37P8z7POTMzE6xU
+        KjWvKEpTlmVXkiR3AuTfFQ8mcLfX68FxHCSTSUwlIIpis9vtYjAYoFAoIJFITC3geu6WZSEej+ueeywW
+        A8dxiEQih8cJBAK/2u02yuUyotHoC9pGNptFq9UCy7LjBQRBOObz+fbq9TpqtRqKxSJUVYWu6yiVSgiF
+        Qs0D+7ie+cKz6Q8Wz/NutVqFaZrwzkqlAsMwoGkagsHgrt/vn98nEF7Z4pXCAOLjPriVd7BtG/l8HgzD
+        7Hkjk6tLsZoHwlc9eKOPovUD6msH3FoXl2Ub4XD4J0FHxj5fML3FSwQ/ITCtDXHn6Vfkat/hv/sZp6/Z
+        L8fCdIkX1/tQXzm493yI5Po2UhRjrfINi8sdzF1pPPivAEOwkOtj0yT42RBCbhsyTbJaGuHi7Q5OMnZ2
+        rPvichsb5s6fkflHPdyi8rLGCOeVDk4cBnvKZ29+pKw7kDepeYqRIXiB4NmlNw8n+vNnbrw3vaIy+gj3
+        tRHOSZ8we2lC+K/DKbbRmAs0cHzpLY5emA7+DfGiXwzihHFOAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="dialogAddFolder.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1402,7 +1402,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADU
-        AQAAAk1TRnQBSQFMAwEBAAH0AQYB9AEGARABAAEQAQAE/wERAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
+        AQAAAk1TRnQBSQFMAwEBAAH8AQYB/AEGARABAAEQAQAE/wERAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
         ARADAAEBAQABEAYAAQj/ACMAAVkBZ3wAAQEBFgHgAQ0BNwFfegABAQEaAYgBLgECARoBFgFbcAABRAEq
         AUMBJgMiAR4BZwEuARABSwGIATIBAgEaARYBW24AAWUBLgEyAVcBMQFTAREBUwERAU8BzQFCARABSwGJ
         ATIBAgEWARUBW2wAAWYCMgFXAe0BRgHtAUYBzAFCAcwBQgHMAUIBEAFPAYcBLgEAARJsAAGGATYBMgFb
@@ -1694,6 +1694,9 @@
         7sFOAtp/MtlFwGqx16tL+/4X0WYFLI6BgOIAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="timerUpdateSongPositionPanel.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1164, 54</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>100</value>
   </metadata>
